Fixed: fixed issue with the overflow

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,6 +2,7 @@
 .About{
     background-color: white;
     color: black;
+    overflow: hidden;
 }
 
 
